# slim-chatui

./: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  README.md  audit-progress.md  docker-compose.yaml  eslint.config.js  hatch_build.py  i18next.config.ts  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: docker.yml  format-backend.yaml  format-build-frontend.yaml  twemoji-font.yml
backend/: dev.sh  requirements-min.txt  requirements.txt  start.sh
backend/open_webui/: __init__.py  config.py  constants.py  env.py  functions.py  main.py  tasks.py
backend/open_webui/internal/: db.py
backend/open_webui/internal/migrations/: 007_add_user_last_active_at.py  010_migrate_modelfiles_to_models.py
backend/open_webui/migrations/: env.py
backend/open_webui/migrations/versions/: 51f81311abb3_init.py  5db08303182b_drop_tag_table.py  5dd61be64f59_drop_folder_parent_id_column.py  b6a03647fe06_drop_user_pii_columns.py  cb611f7fb096_drop_embeds_column_from_chat_message.py
backend/open_webui/models/: __init__.py  access_grants.py  auths.py  chat_messages.py  chats.py  config.py  files.py  folders.py  groups.py  models.py  tags.py  users.py
backend/open_webui/retrieval/: utils.py
backend/open_webui/retrieval/vector/: factory.py  type.py
backend/open_webui/routers/: auths.py  chats.py  configs.py  files.py  folders.py  knowledge.py  models.py  openai.py  retrieval.py  tasks.py  tools.py  users.py  utils.py
backend/open_webui/socket/: main.py  utils.py
backend/open_webui/storage/: provider.py
backend/open_webui/test/: conftest.py
backend/open_webui/test/apps/webui/: test_orphan_files.py  test_zstd_middleware.py
backend/open_webui/test/data/: responses-api-stream-o3-websearch.txt
backend/open_webui/test/util/: abstract_integration_test.py
backend/open_webui/tools/: builtin.py
backend/open_webui/utils/: access_control.py  anthropic.py  auth.py  chat.py  embeddings.py  files.py  logger.py  middleware.py  misc.py  models.py  payload.py  plugin.py  rate_limit.py  response.py  route.py  task.py  tools.py  zstd.py
backend/open_webui/utils/mcp/: client.py
backend/open_webui/utils/telemetry/: constants.py  instrumentors.py
docs/: responses-api-gpt52.json  responses-api-o3.json
src/: app.css  app.d.ts  app.html  tailwind.css
src/lib/: chatListRace.test.ts  chatListRefresh.test.ts  constants.ts  highlight.ts  shortcuts.ts
src/lib/apis/: index.ts
src/lib/apis/auths/: index.ts
src/lib/apis/chats/: index.ts
src/lib/apis/configs/: index.ts
src/lib/apis/files/: index.ts
src/lib/apis/folders/: index.ts
src/lib/apis/models/: index.ts
src/lib/apis/ollama/: index.ts
src/lib/apis/openai/: index.ts
src/lib/apis/retrieval/: index.ts
src/lib/apis/users/: index.ts
src/lib/apis/utils/: index.ts
src/lib/components/: AddConnectionModal.svelte  AddToolServerModal.svelte  ImportModal.svelte  NotificationToast.svelte  OnBoarding.svelte
src/lib/components/admin/: Functions.svelte  Settings.svelte  Users.svelte
src/lib/components/admin/Functions/: FunctionMenu.svelte
src/lib/components/admin/Settings/: CodeExecution.svelte  Connections.svelte  Database.svelte  Documents.svelte  General.svelte  Interface.svelte  Models.svelte  Tools.svelte
src/lib/components/admin/Users/: Groups.svelte  UserList.svelte
src/lib/components/app/: AppSidebar.svelte
src/lib/components/chat/: Chat.svelte  ChatControls.svelte  ChatPlaceholder.svelte  MessageInput.svelte  Messages.svelte  ModelSelector.svelte  Navbar.svelte  Placeholder.svelte  SettingsModal.svelte  ShareChatModal.svelte  ShortcutsModal.svelte  Suggestions.svelte  Tags.svelte
src/lib/components/chat/ContentRenderer/: FloatingButtons.svelte
src/lib/components/chat/Controls/: Controls.svelte  Valves.svelte
src/lib/components/chat/MessageInput/: CallOverlay.svelte  CommandSuggestionList.svelte  FilesOverlay.svelte  InputMenu.svelte  InputVariablesModal.svelte  IntegrationsMenu.svelte
src/lib/components/chat/Messages/: Citations.svelte  CodeBlock.svelte  ContentRenderer.svelte  Error.svelte  Markdown.svelte  Message.svelte  MultiResponseMessages.svelte  ResponseMessage.svelte  Skeleton.svelte  UserMessage.svelte
src/lib/components/chat/ModelSelector/: ModelItem.svelte  ModelItemMenu.svelte  Selector.svelte
src/lib/components/chat/Placeholder/: ChatList.svelte  FolderPlaceholder.svelte  FolderTitle.svelte
src/lib/components/chat/Settings/: About.svelte  Account.svelte  Audio.svelte  DataControls.svelte  General.svelte  (+1 more)
src/lib/components/common/: ChatList.svelte  Checkbox.svelte  CodeEditor.svelte  Collapsible.svelte  ConfirmDialog.svelte  Drawer.svelte  Dropdown.svelte  DropdownOptions.svelte  Emoji.svelte  EmojiPicker.svelte  FileItem.svelte  FileItemModal.svelte  Folder.svelte  FullHeightIframe.svelte  Image.svelte  ImagePreview.svelte  InputModal.svelte  Loader.svelte  Marquee.svelte  Modal.svelte  Pagination.svelte  RichTextInput.svelte  SVGPanZoom.svelte  Selector.svelte  SensitiveInput.svelte  SlideShow.svelte  Switch.svelte  Tags.svelte  Textarea.svelte  ToolCallDisplay.svelte  Tooltip.svelte  UserStatus.svelte  Valves.svelte
src/lib/components/layout/: ChatsModal.svelte  FilesModal.svelte  SearchModal.svelte  Sidebar.svelte
src/lib/components/playground/: Chat.svelte
src/lib/components/workspace/: Models.svelte  Prompts.svelte  Tools.svelte
src/lib/constants/: permissions.ts
src/lib/i18n/: index.ts
src/lib/i18n/locales/: languages.json
src/lib/stores/: index.ts
src/lib/test/: backend.ts  globalSetup.ts
src/lib/types/: index.ts
src/lib/utils/: cjk-font.ts  index.ts
src/lib/utils/marked/: chat-marked.ts  citation-extension.ts  footnote-extension.ts
src/routes/: +layout.svelte
src/routes/(app)/: +layout.svelte
src/routes/(app)/admin/: +layout.svelte
src/routes/(app)/home/: +layout.svelte
src/routes/(app)/playground/: +layout.svelte
src/routes/(app)/workspace/: +layout.svelte  +page.svelte
src/routes/auth/: +page.svelte
src/routes/error/: +page.svelte
(+131 files in other folders)
