[project]
name = "slim-chatui"
description = "Opinionated hard fork of Open WebUI"
authors = [
    { name = "Timothy Jaeryang Baek", email = "tim@openwebui.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "fastapi==0.128.5",
    "uvicorn[standard]==0.40.0",
    "pydantic==2.12.5",
    "python-multipart==0.0.22",

    "python-socketio==5.16.1",
    "cryptography",
    "bcrypt==5.0.0",
    "PyJWT[crypto]==2.11.0",

    "requests==2.32.5",
    "aiohttp==3.13.2", # do not update to 3.13.3 - broken
    "aiocache",

    "sqlalchemy==2.0.46",
    "alembic==1.18.3",

    "pytz==2025.2",

    "loguru==0.7.3",
    "asgiref==3.11.1",

    "black==26.1.0",

    "typer",
]
readme = "README.md"
requires-python = ">= 3.11, < 3.13.0a1"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia",
]

[project.scripts]
open-webui = "open_webui:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "package.json"
pattern = '"version":\s*"(?P<version>[^"]+)"'

[tool.hatch.build.hooks.custom]  # keep this for reading hooks from `hatch_build.py`

[tool.hatch.build.targets.wheel]
sources = ["backend"]
exclude = [
    ".dockerignore",
    ".gitignore",
    ".webui_secret_key",
    "dev.sh",
    "start.sh",
    "webui.db",
]
force-include = { build = "open_webui/frontend" }

[tool.pytest.ini_options]
testpaths = ["backend/open_webui/test"]
pythonpath = ["backend", "backend/open_webui"]

[tool.coverage.run]
source = ["backend/open_webui"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov",
    "httpx",
]
