[project]
name = "slim-chatui"
description = "Opinionated hard fork of Open WebUI"
authors = [
    { name = "Timothy Jaeryang Baek", email = "tim@openwebui.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.135.1",
    "hypercorn>=0.18.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22", # lazy import but hard dependency of FastAPI
    "python-socketio>=5.16.1",
    "bcrypt>=5.0.0",
    "PyJWT>=2.11.0",
    "requests>=2.32.5",
    "aiohttp==3.13.2", # do not update to 3.13.3 - broken(brotli fn param)
    "aiocache",
    "sqlalchemy>=2.0.47",
    "alembic>=1.18.4",
]
readme = "README.md"
requires-python = ">= 3.12, < 3.13.0a1"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "package.json"
pattern = '"version":\s*"(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["backend/open_webui"]
exclude = [
    ".dockerignore",
    ".gitignore",
    ".webui_secret_key",
    "dev.sh",
    "start.sh",
    "webui.db",
]

[tool.pytest.ini_options]
testpaths = ["backend/open_webui/test"]
pythonpath = ["backend", "backend/open_webui"]

[tool.coverage.run]
source = ["backend/open_webui"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov",
    "httpx",
]
